...
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-60dp"
            android:gravity="center"
            android:orientation="vertical"
...
<!--                android:layout_width="237dp"-->
<!--                android:layout_height="246dp"-->
<!--                android:src="@drawable/goldumy"-->
<!--                android:visibility="invisible" />-->

            <EditText
                android:id="@+id/id_input"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#66ffffff"
                android:hint="ID"
                android:padding="5dip" />

            <EditText
                android:id="@+id/pwd_input"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#66ffffff"
                android:hint="PassWord"
                android:inputType="textPassword"
                android:padding="5dip"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selecter_image"
                android:minWidth="200dp"
                android:text="Login"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/login_button2"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selecter_image"
                android:minWidth="200dp"
                android:text="Sign up"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
